force-app/main/default/objects/Marketing_Influence__c/Marketing_Influence__c.object-meta.xml
<CustomObject>
    <description>Capture calculated information for presentation in Marketing Dashboards</description>
    <label>Marketing Influence</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Marketing Influence Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Influences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>