force-app/main/default/objects/Marketing_Influence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of Opportunity</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Influences</relationshipLabel>
    <relationshipName>Marketing_Influences</relationshipName>
    <type>Lookup</type>
</CustomField>