force-app/main/default/objects/Marketing_Influence__c/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <description>Opportunity Amount * Probability</description>
    <formula>Amount__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>