force-app/main/default/objects/Marketing_Influence__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <description>Number of &quot;Influence&quot; touches on the Opportunity.</description>
    <label>Influence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>