force-app/main/default/objects/Marketing_Influence__c/fields/Influenced_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Influenced_Opportunity__c</fullName>
    <formula>if(
(Direct_Impact__c &gt;0
||
Influence__c &gt;0),
&quot;Influenced&quot;,&quot;Not Influenced&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influenced Opportunity</label>
    <type>Text</type>
</CustomField>