force-app/main/default/objects/Marketing_Influence__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Opportunity Record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Marketing Influences</relationshipLabel>
    <relationshipName>Marketing_Influences</relationshipName>
    <type>Lookup</type>
</CustomField>