force-app/main/default/objects/Marketing_Influence__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Opportunity Stage Name
Created as picklist (with Opportunity values) to allow for picklist selection on report filters.</description>
    <label>Stage Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Qualification</fullName>
            </value>
            <value>
                <fullName>2 - Solution Developed</fullName>
            </value>
            <value>
                <fullName>3 - Solution Agreed</fullName>
            </value>
            <value>
                <fullName>4 - Negotiate</fullName>
            </value>
            <value>
                <fullName>5 - Signed/PO in</fullName>
            </value>
            <value>
                <fullName>6 - Setup</fullName>
            </value>
            <value>
                <fullName>7 - Closed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>